// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Session retrieve - no session 1`] = `
{
  "data": {
    "session": null,
  },
}
`;

exports[`Session retrieve 1`] = `
{
  "data": {
    "session": {
      "allowSessionStorage": true,
      "pickupBranch": "790900",
      "userParameters": {
        "barcode": "some-barcode",
        "cardno": "some-cardno",
        "cpr": "some-cpr",
        "customId": "some-customid",
        "userAddress": "some-address",
        "userDateOfBirth": "10-10-2021",
        "userId": "some-userid",
        "userMail": "some@mail.dk",
        "userName": "Ost Ostesen",
        "userTelephone": "123123123",
      },
    },
  },
}
`;

exports[`Session submit 1`] = `
{
  "data": {
    "submitSession": "OK",
  },
}
`;
